[package]
name = "smolscale"
version = "0.3.19"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="A global, auto-scaling, preemptive scheduler"
license="ISC"
repository="https://github.com/geph-official/smolscale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task="4"
async-executor = "1.4.0"
once_cell= "1.5.2"
futures-lite = "1.11.3"
pin-project-lite = "0.2.1"
scopeguard= "1.1.0"
event-listener= "2.5.1"
async-io= "1.3.1"
anyhow= "1.0.37"
async-channel= "1.5.1"
async-oneshot= "0.4.2"
slab= "0.4.2"
log="0.4"
concurrent-queue="1.2.2"
num_cpus="1"
rtrb="0.1.4"
# spin={version="0.9", default-features=false, features=["mutex", "spin_mutex"]}
backtrace="0.3"
fastrand="1"
futures-intrusive = "0.4"
# crossbeam-queue="0.3"
thread_local="1"
cache-padded="1"
crossbeam-deque = "0.8.1"
# stacker="0.1"
# parking_lot = "0.11.1"

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug=2
# lto=true
# codegen-units=1

[dev-dependencies]
criterion = "0.3"
async-global-executor="2"

[[bench]]
name = "my_benchmark"
harness = false

