[package]
name = "smolscale"
version = "0.4.4"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description = "A high-performance async-task scheduler"
license = "ISC"
repository = "https://github.com/geph-official/smolscale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "4"
async-executor = "1.11.0"
once_cell = "1.19.0"
futures-lite = "2.3.0"
scopeguard = "1.2.0"
event-listener = "5.3.0"
async-io = "2.3.2"
log = "0.4.21"
num_cpus = "1"
backtrace = "0.3"
fastrand = "2"
futures-intrusive = "0.5"
thread_local = "1"
async-global-executor = { version = "2", features = ["async-io"] }
dashmap = "5.5.3"
tabwriter = "1.4.0"
st3 = "0.4"
rustc-hash = "1.1.0"
crossbeam-utils = "0.8.19"
smallvec = "1.13.2"
parking_lot = "0.12.2"
futures-util = "0.3.30"
async-channel = "2.3.1"
cfg-if = "1.0.0"
async-compat = "0.2.3"

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug = 2
# lto=true
# codegen-units=1

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
async-oneshot = "0.5.9"

[[bench]]
name = "my_benchmark"
harness = false

[features]
preempt = []
